--- a/js/directives/cRUD/cRUDTmpl.html
+++ b/js/directives/cRUD/cRUDTmpl.html
@@ -1,21 +1,21 @@
 <!-- testing that this file is displaying text
 where it is plugged into the DOM by the directive -->
 
-<!-- {{testview2Ctrl}}
-<hr> {{testview1Ctrl}}
+<!-- {{testrawDataObjectsCtrl}}
+<hr> {{testcRUDCtrl}}
 <hr> {{viewableMessage}}
 <hr> {{useless}}
 <hr> -->
 <div class="uiWrapper">
-  <div class="chatPane">
+  <div class="cRUDPane">
     <div class="messageViewPane">
       <div ng-repeat="message in messages | reverseItAnyway">{{message.userId}}: {{message.text}}-{{message.time|date:'hh:mm:ss'}}</div>
       <!-- <p ng-repeat="msg in messages track by $index">{{messages}}</p> -->
     </div>
   </div>
-  <div class="chatInputBox">
+  <div class="cRUDInputBox">
     <form method="post">
-      <input class="chatInput" ng-model="typeMessage" type="text" name="name" value="" prototype="Chat with your friends">
+      <input class="cRUDInput" ng-model="typeMessage" type="text" name="name" value="" prototype="cRUD with your friends">
     </form>
 
       <button class="buttons" ng-click="sendMessage()" id="send" type="button" name="button">Send</button>
@@ -29,9 +29,9 @@ where it is plugged into the DOM by the directive -->
   <hr>
 </div>
 
-<!-- the <canvas-directive> element tag in
+<!-- the <dbObjects-directive> element tag in
 index.html is requesting an action
 from loginDirective, which is returning
-the contents of canvasTempl.html
+the contents of dbObjectsTempl.html
 it then loads that onto the DOM
 at the tags location-->
